--- a/front/src/components/DeliveryForm/deliveryForm.scss
+++ b/front/src/components/DeliveryForm/deliveryForm.scss
@@ -4,7 +4,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 47px 78px;
+    margin: 47px 0 55px 78px;
+
+    @media screen and (max-width: 600px) {
+        margin-bottom: 75px;
+        }
 
     &__block {
         display: flex;
@@ -48,7 +52,7 @@
         border-width: 4px 6px 0 6px;
         border-style: solid;
         border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent;
-        z-index: 99;
+        z-index: 10;
         opacity: 1;
         top: 100%;
         margin-top: 8px;
@@ -63,11 +67,11 @@
         text-align: center;
         color: #fff;
         padding: 4px 2px;
-        min-width: 180%;
+        min-width: 210%;
         border-radius: 5px;
         pointer-events: none;
         padding: 12px 20px;
-        z-index: 99;
+        z-index: 10;
         opacity: 1;
         top: 100%;
         margin-top: 8px;
@@ -76,5 +80,9 @@
         font-weight: bold;
         font-size: 18px;
         line-height: 22px;
+
+        @media screen and (max-width: 600px) {
+            min-width: 150%;
+            }
     }
 }
