--- a/front/src/components/DeliveryForm/deliveryForm.scss
+++ b/front/src/components/DeliveryForm/deliveryForm.scss
@@ -6,16 +6,20 @@
     flex-wrap: wrap;
     margin: 47px 0 55px 78px;
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 640px) {
         margin-bottom: 75px;
-        }
+    }
+    @media screen and (max-width: 480px) {
+        margin-left: 28px;
+        margin-bottom: 30px;
+    }
 
     &__block {
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
         width: 330px;
-        margin-top: 10px; 
+        margin-top: 10px;
     }
     p {
         font-style: normal;
@@ -24,6 +28,9 @@
         line-height: 40px;
         margin-left: 43px;
         margin-right: 12px;
+        @media screen and (max-width: 480px) {
+            font-size: 22px;
+        }
     }
 
     &__input {
@@ -33,13 +40,15 @@
         background: $gray;
         border: 0 !important;
         border-radius: 4px;
+        @media screen and (max-width: 480px) {
+            height: 32px;
+            font-size: 16px;
+        }
         &:focus {
             outline: none;
         }
     }
 }
-
-
 
 [tooltip] {
     position: relative;
@@ -81,8 +90,14 @@
         font-size: 18px;
         line-height: 22px;
 
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 640px) {
             min-width: 150%;
-            }
+        }
+        @media screen and (max-width: 480px) {
+            min-width: 100%;
+            height: 18px;
+            line-height: 10px;
+            font-size: 12px;
+        }
     }
 }
