--- a/front/src/components/Footer/footer.scss
+++ b/front/src/components/Footer/footer.scss
@@ -19,15 +19,23 @@
     &__sections {
         display: flex;
         flex-direction: row;
-        align-items: flex-end  ;
         justify-content: space-between;
-        margin-top: 81px;
+        flex-wrap: wrap;
+        margin-top: 61px;
+
+        @media screen and (max-width: 480px) {
+            margin-top: 20px;
+            }
 
         &-circle {
             width: 227px;
             height: 227px;
             border-radius: 50%;
             background: #C4C4C4;
+
+            @media screen and (max-width: 1100px) {
+                display: none;
+                }
         }
     }
 }
