--- a/front/src/components/Header/header.scss
+++ b/front/src/components/Header/header.scss
@@ -22,6 +22,9 @@
             justify-content: space-between;
             &-icon {
                 margin: 15px 0 0 98px;
+                @media screen and (max-width: 540px) {
+                    margin: 15px 0 0 28px;
+                }
             }
 
             &-basket {
@@ -35,6 +38,15 @@
                 background: $red;
                 margin: 16px 120px 0 0;
                 cursor: pointer;
+
+                @media screen and (max-width: 540px) {
+                    margin: 15px 28px 0 0;
+                }
+
+                @media screen and (max-width: 640px) {
+                    margin: 15px 95px 0 0;
+                }
+
                 p {
                     margin-left: 7px;
                     margin-right: 4px;
@@ -58,9 +70,13 @@
         justify-content: space-between;
         margin-top: 100px;
 
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 720px) {
             flex-direction: column;
-            }
+        }
+        @media screen and (max-width: 540px) {
+            flex-direction: column;
+            margin-top: 50px;
+        }
 
         h2 {
             margin: 0 0 0 98px;
@@ -69,9 +85,19 @@
             font-size: 64px;
             line-height: 72px;
 
-            @media screen and (max-width: 600px) {
+            @media screen and (max-width: 720px) {
+                margin-left: 94px;
+                font-size: 56px;
+            }
+
+            @media screen and (max-width: 640px) {
                 font-size: 40px;
-                }
+            }
+
+            @media screen and (max-width: 540px) {
+                margin: 0 0 0 28px;
+                font-size: 32px;
+            }
         }
         &-buttons {
             display: flex;
@@ -80,14 +106,22 @@
             width: 291px;
             margin: 8px 92px 0 0;
 
-            @media screen and (max-width: 600px) {
+            @media screen and (max-width: 720px) {
+                margin-left: 395px;
+            }
+
+            @media screen and (max-width: 640px) {
                 margin-left: 95px;
-                }
+            }
+
+            @media screen and (max-width: 540px) {
+                margin: auto;
+            }
 
             &-btn {
                 height: 100%;
                 width: 100%;
-                color: #9D9D9D;
+                color: #9d9d9d;
                 background: $gray;
                 border: 0px !important;
                 border-radius: 6px;
@@ -102,5 +136,4 @@
             }
         }
     }
-
 }
