--- a/front/src/components/Products/products.scss
+++ b/front/src/components/Products/products.scss
@@ -3,27 +3,35 @@
 .products-block {
     overflow-y: auto;
 
-    
     &__category {
         display: flex;
         flex-direction: row;
         background: $gray;
         flex-wrap: wrap;
-        padding: 0 84px 50px 84px;
-        
+        padding: 40px 84px 50px 84px;
+
+        @media screen and (max-width: 480px) {
+            padding: 15px 28px 30px 28px;
+        }
+
+        @media screen and (max-width: 720px) {
+            padding: 15px 28px 30px 28px;
+        }
+
         &--even {
             background: #fff;
         }
-        
+
         &-name {
             width: 100%;
-            font-style: normal;
-            font-weight: normal;
             font-size: 32px;
             line-height: 40px;
-            margin: 40px  0 10px 12px;
+            margin: 0 0 10px 12px;
+
+            @media screen and (max-width: 480px) {
+                font-size: 24px;
+                line-height: 30px;
+                }
         }
-
     }
-
 }
