--- a/front/src/components/Section/section.scss
+++ b/front/src/components/Section/section.scss
@@ -4,24 +4,37 @@
     justify-content: center;
     width: 191px;
 
+    @media screen and (max-width: 600px) {
+        width: 150px;
+        }
+
     div {
         display: flex;
         flex-direction: column;
     }
 
     h3 {
-        font-style: normal;
-        font-weight: normal;
         font-size: 32px;
         line-height: 40px;
         margin-bottom: 23px;
+        margin-top: 20px;
+
+        @media screen and (max-width: 480px) {
+            font-size: 24px;
+            line-height: 30px;
+            margin-bottom: 15px;
+            }
     }
 
     p {
-        font-style: normal;
-        font-weight: normal;
         font-size: 16px;
         line-height: 24px;
         margin-bottom: 16px;
+
+        @media screen and (max-width: 480px) {
+            font-size: 12px;
+            line-height: 14px;
+            margin-bottom: 5px;
+            }
     }
 }
