--- a/front/src/components/Social/social.scss
+++ b/front/src/components/Social/social.scss
@@ -5,8 +5,23 @@
     justify-content: space-between;
     margin: 120px 0 75px 0;
 
+    @media screen and (max-width: 480px) {
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    @media screen and (max-width: 540px) {
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
     &__hiden {
         width: 283px;
+        @media screen and (max-width: 1024px) {
+            display: none;
+        }
     }
 
     &__media {
@@ -17,6 +32,15 @@
 
     &__stores {
         margin-right: 50px;
+        @media screen and (max-width: 480px) {
+            margin-right: 0;
+            margin-top: 20px;
+        }
+
+        @media screen and (max-width: 540px) {
+            margin-right: 0;
+            margin-top: 20px;
+        }
         img {
             margin-left: 16px;
         }
